...
var cxGraphicsBackend: DropdownOptions {
    [
        (id: "dxmt", label: "DXMT"),
        (id: "d3dmetal3", label: "D3Dmetal3"),
        (id: "d3dmetal4", label: "D3DMetal 4 (Beta 2)"),
        (id: "wined3d", label: "Wine"),
        (id: "dxvk", label: "DXVK"),
        (id: "auto", label: L10n.string("Auto"))
    ]
}

enum OnOff: String {
    case off = "0"
...
