...
            "state" : "translated",
            "value" : "macOS 配置要求："
          }
        }
      }
    },
    "Metal 4 Backend" : {
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Metal 4 后端"
          }
...
